[package]
name = "supervisor_xmlrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dxr = { version = "0.6.1", features = ["derive"] }
dxr_client = { version = "0.6.1", features = ["reqwest"] }
tokio = { version = "1.35.0" }
http = { version = "0.2.6"}
url = { version = "2.5.0" }
serde = "1.0.193"